--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "UnityMDK",
 	"author": "Saradora",
 	"version_number": "0.2.0",
-	"website_url": "",
+	"website_url": "https://github.com/Saradora/UnityMDK/",
 	"description": "Personal C# library for modding Unity games.",
 	"dependencies": []
 }
